@@ -8,4 +8,8 @@ abstract public class BaseSymbol implements Symbol {
     public void collectStatistics(AsmStatistics stats) {
         stats.symbolUsed(this);
     }
+
+    public Literal plus(long n) {
+        throw new Error("must not happen: BaseSymbol.plus called");
+    }
 }
